tests/files/type_checker_tests/should_fail/168.cmdr
//Should fail if operation types are incompatible
x = 1 % false;
